# Slides-Thief

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  README.md  README.zh-CN.md  pyproject.toml  setup.py
.github/workflows/: deploy-pages.yml
docs/: cli.md  examples.md  faq.md  index.md  output-schema.md  privacy.md
schemas/: manual-quads.schema.json  slide-lens-report.schema.json
site/: .gitignore  README.md  package-lock.json  package.json  vite.pages.config.ts
site/.openai/: hosting.json
site/app/: ProductInfo.tsx  SlidesThiefApp.tsx  enhance.ts  globals.css  layout.tsx  page.tsx  pages-main.tsx  ratio.ts  slides-worker.ts
site/pages/: index.html
site/public/: CNAME  citation.json  llms-full.txt  llms.txt  manifest.webmanifest  robots.txt  sitemap.xml
site/public/schemas/: manual-quads.schema.json  slide-lens-report.schema.json
site/tests/: ratio.test.mjs  rendered-html.test.mjs  static-pages.test.mjs
slides_thief/: cli.py  web.py
src/slides_thief/: __init__.py  cli.py  web.py
src/slides_thief/templates/: app.html
tests/: test_cli.py  test_web.py
