[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slides-thief"
version = "0.1.0"
description = "Straighten photographed presentation slides, correct perspective distortion, and export them as PDF."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Zekun Wang" }]
keywords = [
  "presentation slides",
  "perspective correction",
  "slide scanner",
  "photo to pdf",
  "image processing",
  "computer vision",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
  "numpy>=1.24",
  "Pillow>=10",
  "reportlab>=4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[project.scripts]
slides-thief = "slides_thief.cli:main"

[project.urls]
Homepage = "https://slidesthief.com/"
Repository = "https://github.com/waittim/Slides-Thief"
Documentation = "https://github.com/waittim/Slides-Thief/tree/main/docs"
Issues = "https://github.com/waittim/Slides-Thief/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]
